@@ -1,3 +1,6 @@
+Changelog v5.1.61 (2024-02-09):
+- Added Clearlogos to Episode Meta
+
 Changelog v5.1.60 (2024-02-08):
 - Fixed Small bug with Torrents
 - Changed Sync Setting Default
